; ModuleID = '/home/carl/AnghaBench/hashcat/deps/secp256k1/src/extr_tests.c_random_fe_non_square.c'
source_filename = "/home/carl/AnghaBench/hashcat/deps/secp256k1/src/extr_tests.c_random_fe_non_square.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @random_fe_non_square(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @random_fe_non_zero(i32* %4)
  %6 = load i32*, i32** %2, align 8
  %7 = call i64 @secp256k1_fe_sqrt(i32* %3, i32* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load i32*, i32** %2, align 8
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @secp256k1_fe_negate(i32* %10, i32* %11, i32 1)
  br label %13

13:                                               ; preds = %9, %1
  ret void
}

declare dso_local i32 @random_fe_non_zero(i32*) #1

declare dso_local i64 @secp256k1_fe_sqrt(i32*, i32*) #1

declare dso_local i32 @secp256k1_fe_negate(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
